@@ -40,6 +40,12 @@ class ClientConfigHomeManagerController extends ClientConfigManagerController {
                     $googleFontsApiKey = $this->modx->getOption('clientconfig.google_fonts_api_key', null, '');
                     $sa['xtype'] = empty($googleFontsApiKey) ? 'textfield' : $sa['xtype'];
                 }
+                elseif ($sa['xtype'] === 'modx-combo' && $setting->get('process_options')) {
+                    $inputOpts = $setting->get('options');
+                    $this->modx->getParser();
+                    $this->modx->parser->processElementTags('', $inputOpts, true, true);
+                    $sa['options'] = $inputOpts;
+                }
                 $grp['items'][] = $sa;
             }
             $tabs[] = $grp;
